enhance migration, add tests